force-app/main/default/objects/Custom_Application_Config__c/Custom_Application_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Custom Application Config</label>
</CustomObject>