force-app/main/default/objects/Custom_Application_Config__c/fields/Disabled_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled Trigger</label>
    <type>Checkbox</type>
</CustomField>