force-app/main/default/objects/Custom_Application_Config__c/fields/Disabled_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled Validation Rule</label>
    <type>Checkbox</type>
</CustomField>