force-app/main/default/objects/Custom_Application_Config__c/fields/Disabled_Workflow_Rule__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Workflow_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled Workflow Rule</label>
    <type>Checkbox</type>
</CustomField>